--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1324,6 +1324,8 @@ div.contendmiddle div.titleAvaliar
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 4;
+    width: 100%;
+    height: 100%;
     grid-template-columns: 100%;
     grid-template-rows: 1fr 1fr 1fr;
     background-color: goldenrod;
@@ -1339,6 +1341,8 @@ div.contendmiddle div.fotoUser
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 3;
+    width: 100%;
+    height: 100%;
     grid-template-columns: 100%;
     grid-template-rows: 1fr 1fr;
     background-color: white;
@@ -1354,6 +1358,8 @@ div.contendmiddle div.avaliar
     grid-row-end: 3;
     grid-column-start: 3;
     grid-column-end: 4;
+    width: 100%;
+    height: 100%;
     grid-template-columns: 100%;
     grid-template-rows: 1fr 1fr;
     background-color: rgb(94, 94, 94);
@@ -1370,14 +1376,23 @@ div.contendmiddle div.btnAvaliar
     grid-row-end: 4;
     grid-column-start: 2;
     grid-column-end: 4;
+    width: 100%;
+    height: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr ;
     background-color: rgb(153, 59, 59);
     justify-content: center ;/*centralizou na vertical*/
     align-items: right ; 
     text-align:right ;
+    align-self: center;
+    justify-self: center;
 }
 
+div.btnAvaliar input[type='button'].btg
+{
+    align-self: center;
+    justify-self: center;
+}
 
 
 
