--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -250,9 +250,15 @@ button.btxg, input[type='submit'].btxg, input[type="button"].btxg
     width: 250px;
 }
 
+i.starEmpty {
+    color: var(--starEmpty);
+}
+
 select 
 {
     width: 250px !important;
+    font-size: var(--h5fsize) !important;
+    font-family: var(--pfont) !important;
 }
 
 input[type='radio']{
@@ -394,6 +400,10 @@ span.success-icon.text-green-700{
     border-radius: 10px;
 }
 
+input:read-only{ /* inserir estilização de campos read-only*/
+    /* background-color: #ced3cc; */
+}
+
 /* Calendar CSS */
 
     .fc-header-toolbar.fc-toolbar 
@@ -502,6 +512,8 @@ span.success-icon.text-green-700{
 
     div.fc-timegrid-slot-label-cushion.fc-scrollgrid-shrink-cushion{
         color: var(--white);
+        font-size: var(--h5fsize);
+
     }
 
     .calendarManager .fc-view-harness.fc-view-harness-active tbody a.fc-daygrid-event.fc-daygrid-dot-event.fc-event,
@@ -911,6 +923,8 @@ div.contato img#c3{
     grid-column-start: 6; 
 }
 
+
+
 /* -----------------------------------------------INDEX END------------------------------------------------- */
 
 /* -----------------------------------------------LOGIN----------------------------------------------------- */
@@ -1246,7 +1260,7 @@ div.navbar div.options div.item h5{
 main.logadoPage div.conteudo.realizarOrcamento {
     display: grid;
     grid-template-columns: 1;
-    grid-template-rows: 10% 1fr 10%;
+    grid-template-rows: 2% 1fr 2%;
     
 }
 
@@ -1266,15 +1280,10 @@ div.space80 form.containerform{
     height: 100%;
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 5% 1fr;    
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 0.5fr;    
     justify-content: center;
-}
-
-
-div.space80 form.containerform input:last-child
-{
-    grid-row-start: 7;
-    grid-row-end: 8;
+    align-items: center;
+    box-sizing: border-box;
 }
 
 form.containerform div.formGroup.flex.flex-col.my-4
@@ -1298,9 +1307,8 @@ form.containerform div.formGroup.flex.flex-col.my-4 label
 main.logadoPage div.conteudo.avaliarProfissional 
 {
     display: grid;
-    grid-template-columns: 20% 1fr 20%;
-    grid-template-rows: 20% 1fr 20%;
-    
+    grid-template-rows: 10% 1fr 10%;
+    justify-content: center;
     
 }
 
@@ -1308,99 +1316,76 @@ main.logadoPage div.conteudo.avaliarProfissional div.contendmiddle
 {
     grid-row-start: 2;
     grid-row-end: 3;
-    grid-column-start: 2;
-    grid-column-end: 3;
     display: grid;
-    grid-template-columns: 10% 1fr 1fr 10%;
-    grid-template-rows: 1fr 1fr 10%;
+    grid-template-columns: 10% 1fr 10%;
     
     justify-content: center;/*centralizou na vertical*/
     align-items: center; /* centralizou na horizontal*/
 }
-div.contendmiddle div.titleAvaliar
-{
-    display: grid;
-    grid-row-start: 1;
-    grid-row-end: 3;
-    grid-column-start: 2;
-    grid-column-end: 4;
+
+div.conteudo.avaliarProfissional div.contendmiddle form#formAdd {
     width: 100%;
     height: 100%;
-    grid-template-columns: 100%;
-    grid-template-rows: 1fr 1fr 1fr;
-    background-color: goldenrod;
-    text-align: center;
+    grid-column-start: 2;
+    grid-column-end: 3;
+
+    display: grid;
+    grid-template-rows: 1fr 0.65fr 0.5fr 1fr;
+    background-color: var(--white);
+    border-radius: 5px;
+}
+
+div.contendmiddle div.titleAvaliar
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
     justify-content: center;
-    align-items: center;
 }
 
 div.contendmiddle div.fotoUser
 {
-    display: grid;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    grid-column-start: 2;
-    grid-column-end: 3;
     width: 100%;
     height: 100%;
-    grid-template-columns: 100%;
-    grid-template-rows: 1fr 1fr;
-    background-color: white;
-    justify-content: center;/*centralizou na vertical*/
-    align-items: center; 
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /*alinha na vertical*/
+    align-items: center;   /*alinha na horizontal*/ 
+}
+
+div.contendmiddle div.fotoUser img#img-user{
+    max-width: 68px;
+    max-height: 68px;
+    display: inline;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid var(--black25);
 }
 
 div.contendmiddle div.avaliar
 {
-    display: grid;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    grid-column-start: 3;
-    grid-column-end: 4;
     width: 100%;
     height: 100%;
-    grid-template-columns: 100%;
-    grid-template-rows: 1fr 1fr;
-    background-color: rgb(94, 94, 94);
-    justify-content: center;/*centralizou na vertical*/
-    align-items: center; 
-    text-align: center;
-    
+
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;   /*alinha na horizontal*/
 }
 
 div.contendmiddle div.btnAvaliar
 {
-    display: grid;
-    grid-row-start: 3;
-    grid-row-end: 4;
-    grid-column-start: 2;
-    grid-column-end: 4;
     width: 100%;
     height: 100%;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr ;
-    background-color: rgb(153, 59, 59);
-    justify-content: center ;/*centralizou na vertical*/
-    align-items: right ; 
-    text-align:right ;
-    align-self: center;
-    justify-self: center;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
-div.btnAvaliar input[type='button'].btg
+div.btnAvaliar button:first-child
 {
-    align-self: center;
-    justify-self: center;
+    margin-right: 15px;
 }
-
-
-
-
-
-
-
-
-
 
 /* -----------------------------------------------AVALIAR PROFISSIONAL END------------------------------------------------- */
