--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1388,4 +1388,59 @@ div.btnAvaliar button:first-child
     margin-right: 15px;
 }
 
+
+
 /* -----------------------------------------------AVALIAR PROFISSIONAL END------------------------------------------------- */
+
+
+
+/*-----------------------------------------------STATUS PEDIDO--------------------------------------------------------------*/
+
+main.logadoPage div.conteudo.StatusPedido 
+{
+    display: grid;
+    grid-template-rows: 10% 1fr 10%;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+main.logadoPage div.conteudo.StatusPedido div.contendmiddle
+{
+    display: grid;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-template-columns: 10% 1fr 10%;
+    width: 100%;
+    height: 100%;
+    justify-content: center;/*centralizou na vertical*/
+    align-items: center; /* centralizou na horizontal*/
+}
+
+div.conteudo.StatusPedido div.contendmiddle form#formAdd {
+    width: 100%;
+    height: 100%;
+    grid-column-start: 2;
+    grid-column-end: 3;
+
+    display: grid;
+    grid-template-rows: 1fr 0.5fr 0.5fr 1fr;
+    background-color: var(--white);
+    border-radius: 5px;
+}
+
+
+div.contendmiddle div.titleStatus
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    background-color: red;
+}
+
+/*-----------------------------------------------STATUS PEDIDO END--------------------------------------------------------------*/
