--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1404,23 +1404,24 @@ main.logadoPage div.conteudo.StatusPedido
     justify-content: center;
     width: 100%;
     height: 100%;
+    
 }
 
-main.logadoPage div.conteudo.StatusPedido div.contendmiddle
+main.logadoPage div.conteudo.StatusPedido  div.contendmiddle
 {
-    display: grid;
     grid-row-start: 2;
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 3;
+    display: grid;
     grid-template-columns: 10% 1fr 10%;
-    width: 100%;
-    height: 100%;
+    
     justify-content: center;/*centralizou na vertical*/
     align-items: center; /* centralizou na horizontal*/
+    
 }
 
-div.conteudo.StatusPedido div.contendmiddle form#formAdd {
+main.logadoPage div.conteudo.StatusPedido  div.contendmiddle form#formAdd {
     width: 100%;
     height: 100%;
     grid-column-start: 2;
@@ -1432,15 +1433,36 @@ div.conteudo.StatusPedido div.contendmiddle form#formAdd {
     border-radius: 5px;
 }
 
-
-div.contendmiddle div.titleStatus
+main.logadoPage div.conteudo.StatusPedido div.contendmiddle div.titleStatus
 {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
     justify-content: center;
-    background-color: red;
+    
+}
+
+div.contendmiddle div.status
+{
+    width: 100%;
+    height: 100%;
+
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;   /*alinha na horizontal*/
+}
+
+div.contendmiddle div.btnStatus
+{
+    width: 100%;
+    height: 100%;
+    grid-row-start: 3;
+    grid-row-end: 5;
+    display:grid;
+    justify-content: center;/*centralizou na vertical*/
+    align-items: center; /* centralizou na horizontal*/
+       
 }
 
 /*-----------------------------------------------STATUS PEDIDO END--------------------------------------------------------------*/
