--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -200,6 +200,7 @@ button, input[type='submit'], input[type="button"], button.btg, input[type='subm
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
+    cursor: pointer;
 }
 
 input[type='submit'][disabled], input[type="button"][disabled], button.btg[disabled], input[type='submit'].btg[disabled], input[type="button"].btg[disabled], button[type="submit"][disabled]
@@ -1329,6 +1330,60 @@ form.containerform div.formGroup.flex.flex-col.my-4 label
 {
     width: 100%;
 }
+
+div.popup.realizarOrcamento {
+
+    width: 550px;
+    height: 400px;
+    padding: 20px;
+    background-color: var(--white);
+    border-radius: 5px;
+    transition: top 0ms ease-in-out 200ms,
+                opacity 200ms ease-in-out 0ms
+                transform 20ms ease-in-out 0ms;
+
+    position: absolute;
+    top: -150%;
+    left: 60%;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(1.25);
+    display: flex;
+    flex-direction: column;
+    z-index: 5;
+}
+
+div.popup.realizarOrcamento.active{
+    top: 55%;
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+    transition: top 0ms ease-in-out 0ms,
+                opacity 0ms ease-in-out 0ms
+                transform 0ms ease-in-out 0ms;
+}
+
+div#popup-p-group{
+    width: 18rem;  
+    align-self: center;
+    margin: 20px 15px; 
+}
+
+div#popup-p-group p{
+    margin: 5px;
+    margin-left: 8%;
+}
+
+div#popup-bt-group{
+    align-self: center; 
+}
+
+div#popup-bt-group input:nth-child(2){
+    margin-left: 10px;
+}
+
+div.space80.disabled{
+    opacity: 0;
+}
+
 
 /* -----------------------------------------------ORÇAMENTO END------------------------------------------------- */
 
