--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1387,8 +1387,6 @@ div.space80.disabled{
 
 /* -----------------------------------------------ORÇAMENTO END------------------------------------------------- */
 
-
-
 /* -----------------------------------------------AVALIAR PROFISSIONAL------------------------------------------------- */
 
 
@@ -1477,6 +1475,96 @@ div.btnAvaliar input:first-child
 }
 
 /* -----------------------------------------AVALIAR PROFISSIONAL END--------------------------------------- */
+
+/*-----------------------------------------------STATUS PEDIDO--------------------------------------------------------------*/
+
+main.logadoPage div.conteudo.StatusPedido /*  div conteudo */
+{
+    display: grid;
+    grid-template-rows: 10% 1fr 10%;
+    grid-template-columns: 1fr 3fr 1fr;
+    justify-content: left;
+    width: 100%;
+    height: 100%;
+        
+}
+
+main.logadoPage div.conteudo.StatusPedido  div.contendmiddle /* div para centralizar no meio */
+{
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    display: grid;
+    grid-template-columns: 10% 1fr 10%;
+    width: 100%;
+    height: 100%;
+    
+    justify-content: center;/*centralizou na vertical*/
+    align-items: center; /* centralizou na horizontal*/
+    
+}
+
+main.logadoPage div.conteudo.StatusPedido  div.contendmiddle div.infoStatus  /* div formulario */
+{
+    width: 80%;
+    height: 100%;
+    grid-column-start: 2;
+    grid-column-end: 3;
+
+    display: grid;
+    grid-template-rows: 10% 1fr 30%;
+    background-color: var(--white);
+    border-radius: 5px;
+}
+
+main.logadoPage div.conteudo.StatusPedido div.contendmiddle div.titleStatus
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+
+
+}
+
+div.contendmiddle div.status
+{
+    width: 60%;
+    height: 90%;
+    
+    display: inline-flex;
+    flex-direction: column;
+    
+    align-self: center;    /*alinha na vertical*/
+    justify-self: center;
+}
+div.contendmiddle div.status h4
+{
+    text-align: left;
+    margin: 6px;
+    margin-top: 10px;
+    font-size: 18px !important;
+    
+}
+
+
+div.contendmiddle form.btnStatus
+{
+    width: 60%;
+    height: 100%;
+    grid-row-start: 3;
+    grid-row-end: 5;
+    display:grid;
+    justify-items: center;/*centralizou na vertical*/
+    align-items: center; /* centralizou na horizontal*/
+    
+    justify-self: center;
+    grid-template-rows: 1fr 1fr;
+}
+
+/*-----------------------------------------------STATUS PEDIDO END--------------------------------------------------------------*/
 
 /* -----------------------------------------------MEU PERFIL----------------------------------------------- */
 
