--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -32,6 +32,7 @@ body{
     --terciary75: rgba(23, 68, 41, 0.75);
     --terciary50: rgba(23, 68, 41, 0.50);
     --quaternary: #CAEED0;
+    --quaternary75: rgba(202, 238, 208, 0.75);
     --quaternary50: rgba(202, 238, 208, 0.50);
     --white: #ffffff;
     --white50: rgba(255, 255, 255, 0.50);
@@ -1489,71 +1490,53 @@ main.logadoPage div.conteudo.StatusPedido /*  div conteudo */
         
 }
 
-main.logadoPage div.conteudo.StatusPedido  div.contendmiddle /* div para centralizar no meio */
+main.logadoPage div.conteudo.StatusPedido  div.infoStatus  /* div formulario */
 {
+    width: 100%;
+    height: 100%;
     grid-row-start: 2;
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 3;
-    display: grid;
-    grid-template-columns: 10% 1fr 10%;
-    width: 100%;
-    height: 100%;
-    
-    justify-content: center;/*centralizou na vertical*/
-    align-items: center; /* centralizou na horizontal*/
-    
-}
-
-main.logadoPage div.conteudo.StatusPedido  div.contendmiddle div.infoStatus  /* div formulario */
-{
-    width: 80%;
-    height: 100%;
-    grid-column-start: 2;
-    grid-column-end: 3;
 
     display: grid;
-    grid-template-rows: 10% 1fr 30%;
+    grid-template-rows: 15% 1fr 23%;
+    grid-template-columns:auto ;
     background-color: var(--white);
     border-radius: 5px;
 }
 
-main.logadoPage div.conteudo.StatusPedido div.contendmiddle div.titleStatus
+main.logadoPage div.conteudo.StatusPedido div.infoStatus div.titleStatus
 {
-    display: flex;
-    flex-direction: column;
+    
     width: 100%;
-    height: 100%;
-    margin-top: 20px;
-
+    height: max-content;
+    align-self: center;
 
 }
 
-div.contendmiddle div.status
+main.logadoPage div.conteudo.StatusPedido div.infoStatus div.status
 {
-    width: 60%;
-    height: 90%;
-    
-    display: inline-flex;
-    flex-direction: column;
-    
+    width: 50%;
+    height: 100%;
+    display: grid;
+    align-items: center;  /*alinha na vertical*/
     align-self: center;    /*alinha na vertical*/
     justify-self: center;
 }
-div.contendmiddle div.status h4
+main.logadoPage div.conteudo.StatusPedido div.infoStatus div.status h4
 {
     text-align: left;
-    margin: 6px;
-    margin-top: 10px;
-    font-size: 18px !important;
+    font-size: 14px !important;
+    margin-bottom: 2px;
+    line-height: 24px;;
     
 }
 
-
-div.contendmiddle form.btnStatus
+main.logadoPage div.conteudo.StatusPedido div.infoStatus form.btnStatus
 {
     width: 60%;
-    height: 100%;
+    height: 90%;
     grid-row-start: 3;
     grid-row-end: 5;
     display:grid;
@@ -1563,6 +1546,20 @@ div.contendmiddle form.btnStatus
     justify-self: center;
     grid-template-rows: 1fr 1fr;
 }
+
+main.logadoPage div.conteudo.StatusPedido div.infoStatus form.btnStatus input.btm
+{
+    height: 28px;
+    padding: 4px 16px;
+    font-size: var(--h6fsize);
+}
+
+main.logadoPage div.conteudo.StatusPedido div.infoStatus form.btnStatus input#cancelar
+{
+    background-color: var(--quaternary75);
+    color: var(--black);
+}
+
 
 /*-----------------------------------------------STATUS PEDIDO END--------------------------------------------------------------*/
 
