--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1334,7 +1334,7 @@ i.fa-solid.fa-calendar-days
 {
     color:var(--black);
 }
-i.fa-solid.fa-gear
+i.fa-solid.fa-person-diggingr
 {
     color:var(--black);
 }
