--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1576,7 +1576,7 @@ main.logadoPage div.conteudo.StatusPedido div.infoStatus div.titleStatus
 
 main.logadoPage div.conteudo.StatusPedido div.infoStatus div.status
 {
-    width: 50%;
+    width: 220px;
     height: 100%;
     display: grid;
     align-items: center;  /*alinha na vertical*/
@@ -1635,7 +1635,7 @@ main.logadoPage div.conteudo.StatusPedido div.infoStatus form.btnStatus.usuario
     
     justify-self: center;
     grid-template-columns: auto;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 main.logadoPage div.conteudo.StatusPedido div.infoStatus form.btnStatus.usuario input#avaliar
